2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release
        