@@ -9,6 +9,7 @@ AM_CPPFLAGS = \
 -DPACKAGE_BIN_DIR=\"$(bindir)\" \
 -DPACKAGE_LIB_DIR=\"$(libdir)\" \
 -DPACKAGE_DATA_DIR=\"$(datadir)/$(PACKAGE)\" \
+@EINA_CFLAGS@ \
 @EVIL_CFLAGS@
 
 bin_PROGRAMS = @EMBRYO_CC_PRG@
@@ -31,7 +32,7 @@ embryo_cc_prefix.c \
 embryo_cc_prefix.h
 
 embryo_cc_CFLAGS = @EMBRYO_CFLAGS@
-embryo_cc_LDADD = $(top_builddir)/src/lib/libembryo.la @EVIL_LIBS@ -lm
+embryo_cc_LDADD = $(top_builddir)/src/lib/libembryo.la @EVIL_LIBS@ @EINA_LIBS@ -lm
 embryo_cc_LDFLAGS = @lt_enable_auto_import@
 
 EXTRA_DIST = \
